--- a/package.json
+++ b/package.json
@@ -6,31 +6,43 @@
     "node": ">=6.5",
     "npm": ">=3.10"
   },
-  "browserslist": [">1%", "last 4 versions", "Firefox ESR", "not ie < 9"],
+  "browserslist": [
+    ">1%",
+    "last 4 versions",
+    "Firefox ESR",
+    "not ie < 9"
+  ],
   "dependencies": {
+    "babel-eslint": "^7.1.1",
     "babel-polyfill": "^6.23.0",
+    "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
-    "express-graphql": "^0.6.6",
     "express-jwt": "^5.3.0",
-    "graphql": "^0.10.3",
+    "fetch-everywhere": "^1.0.5",
     "history": "^4.6.3",
     "isomorphic-style-loader": "^4.0.0",
     "jsonwebtoken": "^7.4.1",
+    "moment": "^2.18.1",
     "node-fetch": "^1.7.1",
     "normalize.css": "^7.0.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "pretty-error": "^2.1.1",
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
     "react": "^15.5.4",
+    "react-analog-clock": "^1.6.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
+    "react-transition-group": "^1.1.2",
+    "reactstrap": "^4.8.0",
+    "recompose": "^0.25.0",
     "redux": "^3.7.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
@@ -38,6 +50,7 @@
     "serialize-javascript": "^1.3.0",
     "source-map-support": "^0.4.15",
     "sqlite3": "^3.1.8",
+    "tcomb-form": "^0.9.17",
     "universal-router": "^3.2.0",
     "whatwg-fetch": "^2.0.3"
   },
@@ -46,13 +59,14 @@
     "autoprefixer": "^7.1.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-rewire": "^1.1.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "babel-template": "^6.25.0",
@@ -62,16 +76,12 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "enzyme": "^2.9.1",
-    "eslint": "^4.4.1",
+    "eslint": "^3.14.1",
     "eslint-config-airbnb": "^15.0.1",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-import-resolver-node": "^0.3.1",
-    "eslint-loader": "^1.8.0",
-    "eslint-plugin-css-modules": "^2.7.1",
-    "eslint-plugin-flowtype": "^2.34.1",
-    "eslint-plugin-import": "^2.6.1",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-prettier": "^2.1.2",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-css-modules": "^2.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.0.1",
     "file-loader": "^0.11.2",
     "front-matter": "^2.1.2",
@@ -103,7 +113,6 @@
     "postcss-pseudoelements": "^5.0.0",
     "postcss-selector-matches": "^3.0.1",
     "postcss-selector-not": "^3.0.1",
-    "prettier": "^1.5.2",
     "raw-loader": "^0.5.1",
     "react-deep-force-update": "^2.0.1",
     "react-error-overlay": "^1.0.9",
@@ -125,34 +134,123 @@
   },
   "babel": {
     "presets": [
-      [
-        "env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
-      ],
-      "stage-2",
-      "react"
+      "react",
+      "stage-0"
+    ],
+    "plugins": [
+      "syntax-trailing-function-commas",
+      "transform-async-to-generator",
+      "transform-es2015-destructuring",
+      "transform-es2015-parameters",
+      "transform-es2015-duplicate-keys",
+      "transform-es2015-modules-commonjs",
+      "transform-exponentiation-operator",
+      "transform-runtime"
     ],
     "env": {
+      "nyc": {
+        "plugins": [
+          "istanbul"
+        ]
+      },
       "test": {
-        "plugins": ["rewire"]
+        "plugins": [
+          "rewire"
+        ]
       }
+    }
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "extends": [
+      "airbnb",
+      "plugin:css-modules/recommended"
+    ],
+    "plugins": [
+      "css-modules"
+    ],
+    "globals": {
+      "__DEV__": true
     },
-    "ignore": [
-      "/node_modules/",
-      "/build/chunks/",
-      "/build/public/",
-      "/build/updates/",
-      "/build/server.js"
-    ]
+    "env": {
+      "browser": true
+    },
+    "rules": {
+      "arrow-parens": "off",
+      "generator-star-spacing": "off",
+      "import/extensions": "off",
+      "import/no-extraneous-dependencies": "off",
+      "react/forbid-prop-types": "off",
+      "react/jsx-filename-extension": "off",
+      "react/no-array-index-key": "off",
+      "react/no-danger": "off",
+      "react/no-unused-prop-types": "off",
+      "react/prefer-stateless-function": "off",
+      "react/require-default-props": "off",
+      "class-methods-use-this": "off",
+      "jsx-a11y/no-static-element-interactions": "off",
+      "import/no-webpack-loader-syntax": "off",
+      "no-restricted-syntax": "off",
+      "no-underscore-dangle": "off",
+      "no-mixed-operators": "off",
+      "no-throw-literal": "off",
+      "no-plusplus": [
+        "error",
+        {
+          "allowForLoopAfterthoughts": true
+        }
+      ],
+      "no-unused-vars": [
+        "error",
+        {
+          "args": "none"
+        }
+      ],
+      "no-param-reassign": [
+        "error",
+        {
+          "props": false
+        }
+      ]
+    }
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard",
+    "rules": {
+      "string-quotes": "single",
+      "property-no-unknown": [
+        true,
+        {
+          "ignoreProperties": [
+            "composes",
+            "primarycolor"
+          ]
+        }
+      ],
+      "selector-pseudo-class-no-unknown": [
+        true,
+        {
+          "ignorePseudoClasses": [
+            "global",
+            "export"
+          ]
+        }
+      ]
+    }
   },
   "lint-staged": {
-    "*.{js,jsx}": ["eslint --fix", "git add"],
-    "*.{json,graphql}": ["prettier --write", "git add"],
-    "*.{css,less,scss,sss}": ["stylelint --fix", "git add"]
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{json}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{css,less,scss,sss}": [
+      "stylelint --fix",
+      "git add"
+    ]
   },
   "scripts": {
     "precommit": "lint-staged",
