--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "isomorphic-style-loader": "^4.0.0",
     "jsonwebtoken": "^7.4.1",
     "moment": "^2.18.1",
+    "mysql2": "^1.4.2",
     "node-fetch": "^1.7.1",
     "normalize.css": "^7.0.0",
     "passport": "^0.4.0",
