--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fetch-everywhere": "^1.0.5",
     "history": "^4.6.3",
     "isomorphic-style-loader": "^4.0.0",
+    "js-cookie": "^2.1.4",
     "jsonwebtoken": "^7.4.1",
     "moment": "^2.18.1",
     "mysql2": "^1.4.2",
