--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
     "react": "^15.5.4",
-    "react-analog-clock": "^1.6.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-transition-group": "^1.1.2",
@@ -62,7 +61,7 @@
     "autoprefixer": "^7.1.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
-    "babel-jest": "^20.0.3",
+    "babel-jest": "^21.0.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-rewire": "^1.1.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -122,11 +121,13 @@
     "react-hot-loader": "^3.0.0-beta.7",
     "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.2.3",
+    "regenerator-runtime": "^0.11.0",
     "rimraf": "^2.6.1",
     "sinon": "^3.2.0",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-order": "^0.6.0",
+    "supertest": "^3.0.0",
     "svg-url-loader": "^2.1.1",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
@@ -138,6 +139,7 @@
   "babel": {
     "presets": [
       "react",
+      "es2015",
       "stage-0"
     ],
     "plugins": [
